# eulerian-video-magnification-cuda

./: .gitignore  LICENSE  Makefile  README.md  comparison_results.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
colab/: evm_cuda_benchmark.ipynb
cuda/: CMakeLists.txt  DESIGN.md  bindings.cpp  setup.py
cuda/evm_cuda/: __init__.py  _common.py  batched.py  benchmark.py  colab_utils.py  pipelines.py  runtime.py
cuda/include/: evm_check.cuh  evm_common.cuh
cuda/kernels/: amplify_render.cu  blur_dn.cu  butter_bandpass.cu  color_cvt.cu  fp16_cvt.cu  ideal_bandpass.cu  iir_bandpass.cu  lpyr.cu  spatial.cu  transpose.cu
deploy/: README.md  build.sh  profile.slurm  render_demo.slurm  submit.slurm  submit_profile.slurm  truba_env.sh
docs/: blog_speedup.md  index.html  profile_baseline.txt  robots.txt  sitemap.xml
evm/: __init__.py  filters.py  magnify.py  pyramids.py  video.py
kaggle/: README.md  kernel-metadata-full.json  kernel-metadata.json  run_benchmark.py  run_fp16_profile.py  run_fp16_test.py  run_full_comparison.py  run_gpu_comparison.py
scripts/: download_samples.py  profile_color.py  profile_comparison.py  profile_cuda.py  profile_detailed_comparison.py  profile_full_comparison.py  profile_motion.py  render_cuda_videos.py  run_evm.py  test_fp16.py  truba_build.sh  truba_profile.slurm  truba_regression.slurm  truba_smoke.py
shared/: __init__.py  h264.py
tests/: __init__.py  test_against_mit_reference.py  test_filters.py  test_pipeline.py  test_pyramids.py  test_video_encode.py
tests/cuda/: conftest.py  test_batched_kernels.py  test_benchmark.py  test_color_cvt.py  test_device_buffer.py  test_lpyr.py  test_pipelines.py  test_spatial.py  test_temporal.py  test_upsample.py
